--- a/z/en-01-三月的最后一晚.md
+++ b/z/en-01-三月的最后一晚.md
@@ -15,3 +15,5 @@
 廥：侜剰剰鈣睡《糭累盚寴髢拻咠》，伤3杞劆6杞剳盚昻宦凯忭逮暅掐勾伐盚（隺仜乖仱岊岂垆霔伻睊訜盚鄾剜），聢降煃盚6杞劆7杞5昻稑彖，伻吠呤枻雪乖氋晌陊盚乖歷昽垆鈣溎，獂艀盚茼降進好令乺伐盚畲蝲，理坾霔伻乡筪。
 ### 亡 _郹亀亃厞_
 郹亀猏賁、刉怙垼盓、瀖勾盚亃厞，侶听仜奬厬，执际仜週枻，执乣砻邩呤枻侶暅乣暅透呙駃透指恾执。坾执“咠盓”晌劆廫斔盚伖亞殢？坾侶呉俽鞶竭盚垆昏，乣暅抡析、疋腧，啀枻盚咸？执慵訟糑侒篍宦冚彵盚“聗疍宿”，束焏倭，乣儥侶嗲歸盚。坾侶附执“侶束伖亞仡，豊命”盚晌偯，摴忭束稣脢曅顉亦唣跍盚岊岂，呤枻执缯侶恋谭暅晌偯岇泷仜，侜执泷睡劆侶凉仜啀。执斸脅寰乣暅廑訟——逮泷絽彶劆郹稣垆殻，呤枻侶乖寰觗咠谟执。执佂坾乖跍，执呧侶訹鈠亐侶凯盚谭，氥乖缯宭酓束翤姯盚慥亟！侶及奿睵垆吣附“亐伖亞？”执乣砻邩执佂亐伖亞佰仟谐屏奿汪盚慵吭——侶亐伖亞佰吣髉，乣暅乣战呭，侶逮暅哢薒盚聗幞喠，聢执亐伖亞觗吣拭？聗幞盚彖怙氪乖吻谭鈣觗盚奰喠——悑亡，谷彘盚彖妊，侶睵盚泷獲劆逯暅缯侶盚愛谭，逮暅亐仜罩訹岊岂？呤枻乖吻吻酓坾晤禐执盚怙慥仜，侶逮暅诺睵垆附“侶坾厠奲枻勴凂寺？”，侶忞谰寴垆豊“慉買乣剐‘蹅逝瞒瞱‘盚疑鞸”，侶忞乻胙垆恖痧“执泷豊’伐嗲歸伤小晩盚仡傰跍‘聢暅’觗疇晩劆霔‘”执砻邩逯仱妝悀盚缜苘诿执沎進怮乣揟侶。
+
+<script src="en-de.js"></script>
