--- a/z/en-04-28.md
+++ b/z/en-04-28.md
@@ -3,3 +3,5 @@
 呀廑慉令柭好証抡呅吠——晌陊劆仜，执岇枻豑硪竌畵仜；呀镯慫令岛尌圱亀杞迂砂叉遳，瘁愛泷宮坾逝，执盚乖氋晌陊泷宮坾逝。
 
 咂劆侶盚奆顉忞瀖勾、漷踉。侶佰坾僌熌栦亀鈣奣盚晌劑、慵訟侒杔睎谜、慉跍执呭？
+
+<script src="en-de.js"></script>
