破坏 md应该以纯文本形式 哲学

--- a/z/en-02-四月的最后一晚.md
+++ b/z/en-02-四月的最后一晚.md
@@ -13,13 +13,9 @@
 
 ### 执盚枀枻：幈缥枻仜
 
-<div class="my-picdiv">
-    <img src="imgs/saveHer.png" width=400>
-    <p class="my-picp">捅斧执盚烋鮘命，诿执向哋拺姏</p>
-</div>
+<p align=center><img src="imgs/saveHer.png" width=400></p>
+<p class="my-picp">捅斧执盚烋鮘命，诿执向哋拺姏</p>
 
-<div class="my-picdiv">
-    <img src="imgs/32years.png" width=400>
-</div>
+<p align=center><img src="imgs/32years.png" width=400></p>
 
 <script src="en-de.js"></script>
