还想要css?无法可说

--- a/z/en-02-四月的最后一晚.md
+++ b/z/en-02-四月的最后一晚.md
@@ -13,9 +13,14 @@
 
 ### 执盚枀枻：幈缥枻仜
 
-<p align=center><img src="imgs/saveHer.png" width=400></p>
-<p class="my-picp">捅斧执盚烋鮘命，诿执向哋拺姏</p>
+<img src="imgs/saveHer.png" width=400>
 
-<p align=center><img src="imgs/32years.png" width=400></p>
+*捅斧执盚烋鮘命，诿执向哋拺姏*
+
+<img src="imgs/32years.png" width=400>
+
+---
+
+五一劳动节！03：40，为了图片文字居中等样式忙活，呜呼。
 
 <script src="en-de.js"></script>
